# Clinic

./: .env.example  .eslintrc.json  .gitignore  CLAUDE.md  README.md  docker-compose.dev.yml  justfile  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.claude/: launch.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  security.yml
apps/core/: Dockerfile  jest.config.ts  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/core/migrations/: .pgmigraterc  1718000000000_initial-schema.ts  1718100000000_slice1-ingestion.ts  1718200000000_slice2-retrieval-indexing.ts  1718300000000_slice3-qa.ts  1718400000000_slice4-handoff-dsr.ts  1718500000000_medication-indication.ts  1718500000000_slice-e6-drafts.ts  1718600000000_procedure.ts  1718700000000_service-request.ts  1718800000000_nphies-icd-coding.ts  1718900000000_nphies-sbs-coding.ts  1719000000000_nphies-diagnosis-linkage.ts  (+3 more)
apps/core/src/: main.ts  (+2 more)
apps/narrative/: Dockerfile  main.py  pyproject.toml
apps/narrative/proto/: narrative.proto
apps/narrative/src/narrative/: __init__.py  assembly.py  config.py  grpc_server.py  interpreter.py  logging_config.py  model_client.py  narrative_service.py  patient_recap.py  prompt.py  provenance.py  tracing.py  types.py
apps/narrative/tests/: test_config.py  test_health.py  test_interpreter.py  test_narrative_service.py  test_patient_recap.py  test_prompt.py  test_provenance.py
apps/qa/: Dockerfile  conftest.py  main.py  pyproject.toml
apps/transcription/: main.py  pyproject.toml
apps/transcription/src/transcription/: config.py  engine.py  reformat.py  reformat_llm.py  segment.py  verbatim.py
apps/transcription/tests/: test_reformat.py  test_segment.py  test_verbatim.py
apps/web/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
data/: synthetic_seed.json
data/mock_audio/: README.md  abdominal-pain-03.transcript.json  chest-pain-01.transcript.json  fever-cough-02.transcript.json
data/ontologies/: icd10am_diagnoses.json  nphies_necessity_map.csv  sbs_achi_services.json  sfda_medications.json
docs/: PROJECT-STATUS-FULL-2026-07-22.docx  PROJECT-STATUS-FULL-2026-07-22.md  demo-runbook.md  evidence-pack-e0.md
docs/api/: 01-conventions.md  02-auth.md  03-patient.md  04-narrative.md  05-qa.md  06-handoff.md  07-admin.md  08-nphies.md  09-interpreter.md  10-ambient.md  11-since-last-visit.md
docs/architecture/: 01-overview.md  02-components.md  03-deployment.md  04-data-flow.md  05-security.md  ambient-capture.md  dictation.md  on-prem-model.md  since-last-visit.md
docs/classifier/: 01-design.md  02-rules.md  03-evaluation.md
docs/data/: 01-schema.md  02-fhir-mapping.md  03-retrieval-index.md  04-audit-log.md
docs/ops/: 01-environments.md  02-observability.md  03-incident-response.md
docs/prompts/: ambient-segmentation-prompt.md  blocklist.md  draft-prompt.md  interpreter-prompt.md  narrative-prompt.md  patient-recap-prompt.md  qa-answer-prompt.md  qa-refusal-prompt.md  reformat-prompt.md  specialty-templates.md
infra/helm/: Chart.yaml  values-dev.yaml  values-prod.yaml  values-staging.yaml  values.yaml
infra/keycloak/: realm-dev.json
infra/postgres/: init.sql
infra/scripts/: README.md  backup-db.sh  restore-db.sh  start-dev.ps1
infra/terraform/: README.md  main.tf  outputs.tf  variables.tf
services/orchestrator/: __init__.py  conftest.py  deepseek_client.py  live_scribe.py  main.py  pyproject.toml
services/orchestrator/tests/: test_deepseek.py  test_live_scribe.py
services/veritas-graph/: graph_client.py  ingest_ontologies.py  necessity.py  pyproject.toml
services/veritas-graph/tests/: test_necessity.py
tests/e2e/: document-draft.spec.ts  medication-reconciliation.spec.ts  patient-scope.spec.ts  record-search.spec.ts
tests/load/: README.md  narrative.js  patient-view.js  qa-allowed.js  qa-refused.js  ward-handoff.js
(+222 files in other folders)
