[project]
name = "narrative"
version = "0.1.0"
description = "Clinical Copilot narrative generation service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "grpcio>=1.63.0",
    "grpcio-health-checking>=1.63.0",
    "grpcio-tools>=1.63.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-exporter-otlp-proto-http>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "pydantic>=2.7.1",
    "pydantic-settings>=2.2.1",
    "structlog>=24.1.0",
    "asyncpg>=0.29.0",
    "blocklist",
    "retrieval",
    "httpx>=0.28.1",
]

[tool.uv.sources]
blocklist = { path = "../../packages/blocklist", editable = true }
retrieval = { path = "../../packages/retrieval", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "httpx>=0.27.0",
    "mypy>=1.10.0",
    "ruff>=0.4.5",
    "grpcio-testing>=1.63.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN", "N"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/narrative"]
