[project]
name = "transcription"
version = "0.1.0"
description = "Clinical Copilot dictation transcription service (on-prem STT)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.1",
    "pydantic-settings>=2.2.1",
    "structlog>=24.1.0",
    "httpx>=0.28.1",
]

# faster-whisper is OPTIONAL — installed only on the on-prem GPU host running
# the real engine. The service runs in stub mode without it.
[project.optional-dependencies]
whisper = [
    "faster-whisper>=1.0.0",
]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.4.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/transcription"]

[tool.ruff]
target-version = "py312"
line-length = 100
