[project]
name = "orchestrator"
version = "0.1.0"
description = "Veritas-Medica orchestrator services (DeepSeek integration)"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "phi-guard",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
]

[tool.uv.sources]
phi-guard = { path = "../../packages/phi-guard", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
